--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "start": "next start -p 8081"
   },
   "dependencies": {
+    "@vercel/node": "^1.9.1",
     "next": "10.0.5",
     "next-images": "^1.7.0",
+    "nodemailer": "^6.5.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "styled-components": "^5.2.1"
@@ -17,6 +19,7 @@
   "devDependencies": {
     "@svgr/webpack": "^5.5.0",
     "@types/node": "^14.14.21",
+    "@types/nodemailer": "^6.4.0",
     "@types/react": "^17.0.0",
     "@types/styled-components": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
