--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^5.5.0",
+    "@types/googlemaps": "^3.43.3",
     "@types/node": "^14.14.21",
     "@types/nodemailer": "^6.4.0",
     "@types/react": "^17.0.0",
